# FruitDragon

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/audio/: AudioCacheTable.hpp  AudioCollection.hpp  FileTree.hpp  RawAudio.hpp
backend/include/streaming/: AudioStreamServer.hpp
backend/include/utils/: Config.hpp
backend/src/: server.cpp
backend/src/audio/: AudioCacheTable.cpp  AudioCollection.cpp  FileTree.cpp  RawAudio.cpp
backend/src/streaming/: AudioStreamClient.cpp  AudioStreamServer.cpp
backend/src/utils/: Config.cpp
backend/tests/: test_Config.cpp  test_FileTree.cpp  test_config.cpp  test_reading.cpp
backend/tests/config/: cache.json  config.json
web/: package-lock.json  package.json
